Fix off center close icon on modal

--- a/app/assets/stylesheets/judging.scss
+++ b/app/assets/stylesheets/judging.scss
@@ -46,19 +46,6 @@
   width: 80%; /* Could be more or less, depending on screen size */
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
 
 .main-row-header {
   display: flex;
